Change clonable to copy constructor